--- a/testblog_app/.gitignore
+++ b/testblog_app/.gitignore
@@ -14,20 +14,14 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+.idea/
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+## Nodejs
+node_modules/
 
 ### VS Code ###
 .vscode/
